fix(backend): Re-write view to not collapse every entitiy into one  #50